--- a/public/assets/css/estilo.css
+++ b/public/assets/css/estilo.css
@@ -1,4 +1,5 @@
-.coments{
-    text-align: justify;
-    background-color: aqua;
-}
+@import url('https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css');
+
+
+
